<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">めんたんぴん</string>
    <string name="action_settings">Settings</string>
    <string name="select_hand">手牌入力</string>
    <string name="hand_01">手牌01</string>
    <string name="hand_02">手牌02</string>
    <string name="hand_03">手牌03</string>
    <string name="hand_04">手牌04</string>
    <string name="hand_05">手牌05</string>
    <string name="hand_06">手牌06</string>
    <string name="hand_07">手牌07</string>
    <string name="hand_08">手牌08</string>
    <string name="hand_09">手牌09</string>
    <string name="hand_10">手牌10</string>
    <string name="hand_11">手牌11</string>
    <string name="hand_12">手牌12</string>
    <string name="hand_13">手牌13</string>
    <string name="hand_14">手牌14</string>
    <string name="pai_man_1">一萬</string>
    <string name="pai_man_2">二萬</string>
    <string name="pai_man_3">三萬</string>
    <string name="pai_man_4">四萬</string>
    <string name="pai_man_5">五萬</string>
    <string name="pai_man_6">六萬</string>
    <string name="pai_man_7">七萬</string>
    <string name="pai_man_8">八萬</string>
    <string name="pai_man_9">九萬</string>
    <string name="pai_pin_1">一筒</string>
    <string name="pai_pin_2">二筒</string>
    <string name="pai_pin_3">三筒</string>
    <string name="pai_pin_4">四筒</string>
    <string name="pai_pin_5">五筒</string>
    <string name="pai_pin_6">六筒</string>
    <string name="pai_pin_7">七筒</string>
    <string name="pai_pin_8">八筒</string>
    <string name="pai_pin_9">九筒</string>
    <string name="pai_sou_1">一索</string>
    <string name="pai_sou_2">二索</string>
    <string name="pai_sou_3">三索</string>
    <string name="pai_sou_4">四索</string>
    <string name="pai_sou_5">五索</string>
    <string name="pai_sou_6">六索</string>
    <string name="pai_sou_7">七索</string>
    <string name="pai_sou_8">八索</string>
    <string name="pai_sou_9">九索</string>
    <string name="pai_ton">東</string>
    <string name="pai_nan">南</string>
    <string name="pai_sha">西</string>
    <string name="pai_pei">北</string>
    <string name="pai_haku">白</string>
    <string name="pai_hatu">發</string>
    <string name="pai_chun">中</string>
    <string name="button_dummy">ダミー</string>
    <string name="button_check">リーチ！</string>
    <string name="button_clear">リセット</string>
    <string name="result_hand">手牌</string>
    <string name="result_pattern">聴牌パターン</string>

</resources>