<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <TextView
	        android:id="@+id/text_result_hand"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:text="@string/result_hand"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pai_max_height"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/scroll_field_right_margin"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >
        
	    <ImageButton
	        android:id="@+id/result_hand_01"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_01"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_02"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_02"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	
	    <ImageButton
	        android:id="@+id/result_hand_03"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_03"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
		
	    <ImageButton
	        android:id="@+id/result_hand_04"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_04"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
		
	    <ImageButton
	        android:id="@+id/result_hand_05"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_05"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
		
	    <ImageButton
	        android:id="@+id/result_hand_06"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_06"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_07"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_07"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_08"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_08"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	   
	    <ImageButton
	        android:id="@+id/result_hand_09"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_09"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_10"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_10"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_11"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_11"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_12"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_12"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_13"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_13"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
	    
	    <ImageButton
	        android:id="@+id/result_hand_14"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@null"
	        android:contentDescription="@string/hand_14"
	        android:scaleType="fitCenter"
	        android:src="@drawable/ura" />
    
    </LinearLayout>
    
	
	
	<TextView
	        android:id="@+id/text_result_pattern"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/result_pattern"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false" >
	    
	    <LinearLayout
	        android:id="@+id/result_pattern_layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" />
           
	</ScrollView>

</LinearLayout>