<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="1"
	        android:text="@string/select_hand"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <Button
	        android:id="@+id/button_clear"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="@dimen/button_spacing"
	        android:paddingRight="@dimen/button_spacing"
	        android:text="@string/button_clear" />
	    
    </LinearLayout>
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"  >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                
				<RelativeLayout
				    android:id="@+id/main_hand_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="5dp"
				    android:gravity="left"
				    android:orientation="horizontal" />
		    
				<RelativeLayout
				    android:id="@+id/main_fixed_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="5dp"
				    android:layout_marginBottom="10dp"
				    android:orientation="horizontal" />
	
            </LinearLayout>
            
        </ScrollView>
        
		<ScrollView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
		    
		    <LinearLayout
		        android:id="@+id/main_jan_pai_buttons"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		        
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/pai_max_height"
			        android:layout_marginTop="20dp"
			        android:orientation="horizontal" >
			        
			        <ImageButton
			            android:id="@+id/image_button_man_1"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_man_1"
			            android:scaleType="fitStart"
			            android:src="@drawable/m1" />
			
			        <ImageButton
			            android:id="@+id/image_button_man_2"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_man_2"
			            android:scaleType="fitStart"
			            android:src="@drawable/m2" />
				    
				    <ImageButton
				        android:id="@+id/image_button_man_3"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_man_3"
				        android:scaleType="fitStart"
				        android:src="@drawable/m3" />
				    
				    <ImageButton
				        android:id="@+id/image_button_man_4"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_man_4"
				        android:scaleType="fitStart"
				        android:src="@drawable/m4" />
				    
				    <ImageButton
				        android:id="@+id/image_button_man_5"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_man_5"
				        android:scaleType="fitStart"
				        android:src="@drawable/m5" />
				    
				    <ImageButton
				        android:id="@+id/image_button_man_6"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_man_6"
				        android:scaleType="fitStart"
				        android:src="@drawable/m6" />
				    
				    <ImageButton
				        android:id="@+id/image_button_man_7"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_man_7"
				        android:scaleType="fitStart"
				        android:src="@drawable/m7" />
				    
				    <ImageButton
				        android:id="@+id/image_button_man_8"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_man_8"
				        android:scaleType="fitStart"
				        android:src="@drawable/m8" />
				    
				    <ImageButton
				        android:id="@+id/image_button_man_9"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_man_9"
				        android:scaleType="fitStart"
				        android:src="@drawable/m9" />
				
			    </LinearLayout>
			    
			    
			    
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/pai_max_height"
			        android:layout_marginTop="10dp"
			        android:orientation="horizontal" >
			        
			        <ImageButton
			            android:id="@+id/image_button_pin_1"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_pin_1"
			            android:scaleType="fitStart"
			            android:src="@drawable/p1" />
			
			        <ImageButton
			            android:id="@+id/image_button_pin_2"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_pin_2"
			            android:scaleType="fitStart"
			            android:src="@drawable/p2" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pin_3"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pin_3"
				        android:scaleType="fitStart"
				        android:src="@drawable/p3" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pin_4"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pin_4"
				        android:scaleType="fitStart"
				        android:src="@drawable/p4" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pin_5"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pin_5"
				        android:scaleType="fitStart"
				        android:src="@drawable/p5" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pin_6"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pin_6"
				        android:scaleType="fitStart"
				        android:src="@drawable/p6" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pin_7"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pin_7"
				        android:scaleType="fitStart"
				        android:src="@drawable/p7" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pin_8"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pin_8"
				        android:scaleType="fitStart"
				        android:src="@drawable/p8" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pin_9"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pin_9"
				        android:scaleType="fitStart"
				        android:src="@drawable/p9" />
				
			    </LinearLayout>
			    
			    
			    
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/pai_max_height"
			        android:layout_marginTop="10dp"
			        android:orientation="horizontal" >
			        
			        <ImageButton
			            android:id="@+id/image_button_sou_1"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_sou_1"
			            android:scaleType="fitStart"
			            android:src="@drawable/s1" />
			
			        <ImageButton
			            android:id="@+id/image_button_sou_2"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_sou_2"
			            android:scaleType="fitStart"
			            android:src="@drawable/s2" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sou_3"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sou_3"
				        android:scaleType="fitStart"
				        android:src="@drawable/s3" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sou_4"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sou_4"
				        android:scaleType="fitStart"
				        android:src="@drawable/s4" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sou_5"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sou_5"
				        android:scaleType="fitStart"
				        android:src="@drawable/s5" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sou_6"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sou_6"
				        android:scaleType="fitStart"
				        android:src="@drawable/s6" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sou_7"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sou_7"
				        android:scaleType="fitStart"
				        android:src="@drawable/s7" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sou_8"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sou_8"
				        android:scaleType="fitStart"
				        android:src="@drawable/s8" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sou_9"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sou_9"
				        android:scaleType="fitStart"
				        android:src="@drawable/s9" />
				
			    </LinearLayout>
			    
			    
			    
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/pai_max_height"
			        android:layout_marginTop="10dp"
			        android:orientation="horizontal" >
			        
			        <ImageButton
			            android:id="@+id/image_button_ton"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_ton"
			            android:scaleType="fitStart"
			            android:src="@drawable/j1" />
			
			        <ImageButton
			            android:id="@+id/image_button_nan"
			            android:layout_width="0dp"
			            android:layout_height="match_parent"
			            android:layout_weight="1"
			            android:background="@null"
			            android:contentDescription="@string/pai_nan"
			            android:scaleType="fitStart"
			            android:src="@drawable/j2" />
				    
				    <ImageButton
				        android:id="@+id/image_button_sha"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_sha"
				        android:scaleType="fitStart"
				        android:src="@drawable/j3" />
				    
				    <ImageButton
				        android:id="@+id/image_button_pei"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_pei"
				        android:scaleType="fitStart"
				        android:src="@drawable/j4" />
				    
				    <ImageButton
				        android:id="@+id/image_button_haku"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_haku"
				        android:scaleType="fitStart"
				        android:src="@drawable/j5" />
				    
				    <ImageButton
				        android:id="@+id/image_button_hatu"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_hatu"
				        android:scaleType="fitStart"
				        android:src="@drawable/j6" />
				    
				    <ImageButton
				        android:id="@+id/image_button_chun"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/pai_chun"
				        android:scaleType="fitStart"
				        android:src="@drawable/j7" />
				    
				    <ImageButton
				        android:id="@+id/image_button_dummy_01"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/button_blank"
				        android:scaleType="fitStart"
				        android:src="@drawable/ura"
				        android:visibility="invisible" />
				    
				    <ImageButton
				        android:id="@+id/image_button_dummy_02"
				        android:layout_width="0dp"
				        android:layout_height="match_parent"
				        android:layout_weight="1"
				        android:background="@null"
				        android:contentDescription="@string/button_blank"
				        android:scaleType="fitStart"
				        android:src="@drawable/ura"
				        android:visibility="invisible" />
				
			    </LinearLayout>
		        
			    <Button
			        android:id="@+id/button_call"
			        style="?android:attr/buttonStyleSmall"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:layout_marginTop="10dp"
			        android:paddingLeft="@dimen/button_spacing"
			        android:paddingRight="@dimen/button_spacing"
			        android:text="@string/button_call" />
			    
			    <Button
				    android:id="@+id/button_check"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="30dp"
				    android:layout_marginBottom="10dp"
				    android:text="@string/button_check" />
		    
		    </LinearLayout>
	    
        </ScrollView>
	    
    </LinearLayout>

</LinearLayout>